deploy/static/01-starboard-operator.ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: starboard-system
  labels:
    app.kubernetes.io/name: starboard-operator
    app.kubernetes.io/instance: starboard-operator
    app.kubernetes.io/version: "0.15.38"
    app.kubernetes.io/managed-by: kubectl
