deploy/static/05-starboard-operator.deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: starboard-operator
  namespace: starboard-system
  labels:
    app.kubernetes.io/name: starboard-operator
    app.kubernetes.io/instance: starboard-operator
    app.kubernetes.io/version: "0.15.38"
    app.kubernetes.io/managed-by: kubectl
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: metrics
      name: metrics
  selector:
    app.kubernetes.io/name: starboard-operator
    app.kubernetes.io/instance: starboard-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starboard-operator
  namespace: starboard-system
  labels:
    app.kubernetes.io/name: starboard-operator
    app.kubernetes.io/instance: starboard-operator
    app.kubernetes.io/version: "0.15.38"
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: starboard-operator
      app.kubernetes.io/instance: starboard-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: starboard-operator
        app.kubernetes.io/instance: starboard-operator
    spec:
      serviceAccountName: starboard-operator
      automountServiceAccountToken: true
      containers:
        - name: "starboard-operator"
          image: "docker.io/aquasec/starboard-operator:0.15.38"
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 8080
            - name: probes
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
      securityContext: {}
